plugins {
    id 'java'
    id 'application'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

ext {
    javafxVersion = '21.0.2'
}

def os = org.gradle.internal.os.OperatingSystem.current()
def classifier = os.isWindows() ? 'win' : os.isMacOsX() ? 'mac' : 'linux'

dependencies {
    implementation "org.openjfx:javafx-base:$javafxVersion:$classifier"
    implementation "org.openjfx:javafx-controls:$javafxVersion:$classifier"
    implementation "org.openjfx:javafx-graphics:$javafxVersion:$classifier"
    implementation "org.openjfx:javafx-web:$javafxVersion:$classifier"
    implementation "org.openjfx:javafx-media:$javafxVersion:$classifier"
    implementation "org.openjfx:javafx-swing:$javafxVersion:$classifier" 

    implementation "org.jxmapviewer:jxmapviewer2:2.8"
    implementation files('lib/JMapViewer.jar')

    /* 
       Jakarta Mail
        */
    implementation 'jakarta.mail:jakarta.mail-api:2.1.3'

    implementation 'org.eclipse.angus:angus-mail:2.0.2'


        /*
       HTTP Client (OkHttp) + JSON (Gson)
     */
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'

    /* 
       DB + Env
        */
    // implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.10'
    //implementation 'org.mysql:mysql-connector-j:9.1.0' 
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.5.3'

    implementation 'io.github.cdimascio:java-dotenv:5.2.2'

    //add org.json
    implementation "org.json:json:20240303"
    /* 
       Testing
        */
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
}

application {
    mainClass = 'org.yamdut.App'
}

test {
    useJUnitPlatform()
}
